# oviz

./: .gitignore  AGENTS.md  FADE_USAGE_EXAMPLE.md  LICENSE  MANIFEST.in  README.md  dash_test.py  dash_test_3d_orbits.py  dash_test_oo.py  data_explore.ipynb  data_traces.py  pyproject.toml  requirements.txt  setup.py
cluster_traces/: StarClusters3DPlotter.py  __init__.py  cluster_traces.py  dash_test.py  orbit_maker.py  point_sizes.py
dash_gaia_orbits/: StarClusters3DPlotter.py  StarClusters3DPlotter_cylindrical.py  cluster_traces.py  dash_test.py  dash_test_oo.py  orbit_maker.py  point_sizes.py
dash_gaia_orbits.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: AR_DEVELOPMENT_PLAN.md
examples/: galpy_orbit_tracebacks_tutorial.ipynb  main_figure_simple_galactic_tutorial.ipynb  main_figure_tutorial.ipynb  taurus_core_sigma_figure_tutorial.ipynb  website_figure_tutorial.ipynb
notebooks/: alphaPer_3d_plot.html  alpha_per.ipynb  ap_family.ipynb  clustering_solutions_dec20.ipynb  cr135_3d_plot.html  cr135_family.ipynb  gal_movie.ipynb  ivs_notebook.ipynb  juan_3d_plot.ipynb  kpc_scale.ipynb  large_cluster_sample_traceback.ipynb  m6_3d_plot.html  m6_family.ipynb  mate_stars.ipynb  mustache.ipynb  n_sne_poisson.ipynb  nature_figure1.ipynb  nora_carina.ipynb  omuamua.ipynb  oumuamua.ipynb  sf_bursts.ipynb  sigma_taurus.ipynb  sne_locations.ipynb  star_formation_patterns.ipynb  talk_walter_rix_group.ipynb  test_notebook.ipynb  testing_notebook.ipynb  working_notebook.ipynb
oviz/: __init__.py  (+29 more)
oviz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+64 files in other folders)
