[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dash_gaia_orbits"
version = "0.0.1"
authors = [{name="Cameren Swiggum", email="cameren.swiggum@univie.ac.at"}]
description = "A Plotly-Dash app for visualizing Gaia orbits"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.26.2",
    "pandas >= 1.3.5",
    "dash >= 2.14.2",
    "plotly >= 5.13.0",
    "astropy >= 5.2.1",
    "galpy >= 1.9.1",
]


[tool.setuptools]
py-modules = []